# degit-rs

./: Cargo.toml  README.md
.zed/: debug.json
src/: lib.rs  main.rs  tests.rs
